Reparando erros de pasta

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <nav>
-            <p>Minha página</p>
+            <p>Aprendendo USar o GHi e GitHub</p>
 
     </nav>
         
