--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <body>
         <nav>
-            <p>Aprendendo USar o GHi e GitHub</p>
-
+            <p>Aprendendo Usar o Git e GitHub</p>
     </nav>
         
     </body>
